Fixed param fields not showing up properly in workflow editor.

--- a/app/styles/_cliche.scss
+++ b/app/styles/_cliche.scss
@@ -471,6 +471,7 @@ $inputs-border-color: #d7d7d7;
     .input-property-body {
       padding: 15px;
       overflow: auto;
+      min-width: 100%;
 
       .checkbox {
         margin: 0;
